--- a/po/fr.po
+++ b/po/fr.po
@@ -208,7 +208,7 @@ msgstr "échec du lancement :"
 
 #: src/download.rs:263
 msgid "does not contain PKGBUILD: skipping"
-msgstr "ne contient pas de PKGBUILD : ignorer"
+msgstr "ne contient pas de PKGBUILD : ignoré"
 
 #: src/download.rs:294
 msgid " ({total>padding$}/{total}) downloading: {pkg}"
