Add env section in paru.conf

--- a/man/paru.conf.5
+++ b/man/paru.conf.5
@@ -289,3 +289,10 @@ being passed to file manager.
 .TP
 .B Pager = Command
 Command to use for paging
+
+.SH ENV
+Set environment variables.
+
+.TP
+.B Key = Value
+Sets the environment variable Key to Value.
